# md4x

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  LICESNSE  PLAN.md  README.md  build.zig  build.zig.zon  md4x  package.json
.agents/skills/release/: SKILL.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci-build.yml  ci-fuzz.yml  ci.yml  codeql.yml  release.yml
cli/: CMakeLists.txt  md4c-cli.c  md4c.1  md4x-cli.c  md4x.1
docs/: comark-ast.md  js-bindings.md  markdown-syntax.md  parser-api.md  renderers.md
md2html/: md2html.c
rust/: Cargo.toml  publish.sh
rust/md4x/: Cargo.toml
rust/md4x-sys/: Cargo.toml  build.rs
rust/md4x-sys/src/: lib.rs
rust/md4x/src/: lib.rs
scripts/: _unicode-map.ts  build-entity-map.ts  build-folding-map.ts  build-punct-map.ts  build-whitespace-map.ts  release.ts  run-tests.py  run-tests.ts
spec/: comark-ast.md  comark-md.md
src/: CMakeLists.txt  entity.c  entity.h  md4c-ansi.c  md4c-ansi.h  md4c-ansi.pc.in  md4c-html.c  md4c-json.c  md4c-json.h  md4c-json.pc.in  md4c.c  md4c.h  md4x-ansi.c  md4x-ansi.pc.in  md4x-html.c  md4x-html.h  md4x-html.pc.in  md4x-json.c  md4x-json.h  md4x-json.pc.in  md4x-napi.c  md4x-wasm.c  md4x.c  md4x.h  md4x.pc.in
src/cli/: md4x-cli.c  md4x.1
src/renderers/: md4x-ansi.c  md4x-ansi.h  md4x-ast.c  md4x-ast.h  md4x-heal-wrap.h  md4x-heal.c  md4x-heal.h  md4x-html.c  md4x-html.h  md4x-json.c  md4x-json.h  md4x-markdown.c  md4x-meta.c  md4x-meta.h  md4x-props.h  md4x-text.c  md4x-text.h
test/: coverage.txt  pathological-tests.py  prog.py  regressions.txt  spec-alerts.txt  spec-attributes.txt  spec-components.txt  spec-frontmatter.txt  spec-hard-soft-breaks.txt  spec-latex-math.txt  spec-permissive-autolinks.txt  spec-strikethrough.txt  spec-tables.txt  spec-tasklists.txt  spec-underline.txt  spec-wiki-links.txt  spec.txt
test/fuzzers/: build.sh  fuzz-mdansi.c  fuzz-mdast.c  fuzz-mdheal.c  fuzz-mdhtml.c  fuzz-mdmeta.c  fuzz-mdtext.c
test/fuzzers/seed-corpus/: alerts.md  attributes.md  code-meta.md  commonmark.md  components.md  frontmatter.md  gfm.md  heal.md  underline.md
website/: App.vue  env.d.ts  index.css  index.html  package.json  router.ts  vite.config.mjs
website/components/: AnsiTerminal.vue  ComarkReactRenderer.vue  ComarkVueRenderer.vue  TabSelect.vue
website/pages/: playground.vue  readme.vue
website/samples/: 1.basics.md  2.code-and-tables.md  3.comark.md  4.alerts.md  5.extensions.md  comark.md  components.ts  extensions.md
website/utils/: ansi.ts
